# local-chamber

./: .gitignore  Makefile  README.md  configure  postactivate  pyproject.toml  pytest.ini  tox.ini
.circleci/: config.yml
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  local_chamber.rst  make.bat  modules.rst  requirements.txt
local_chamber/: __init__.py  __main__.py  archive.py  chamber.py  cli.py  exception.py  local_chamber.py  shell.py  vault.py  version.py
make.include/: clean.mk  common.mk  docs.mk  lint.mk  publish.mk  test.mk  version.mk
scripts/: testinit
tests/: __init__.py  conftest.py  test_archive.py  test_cli.py  test_local_chamber.py
tests/data/: secrets.json  test.csv  test.dotenv  test.json  test.tfvars  test.tsv  test.yaml  testservice.json
tests/data/secrets-test/-/: commastr
tests/data/secrets/testservice/sub1/: key1  key2
tests/data/secrets/testservice/sub2/: key1
