[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.9"



[project]
name = "local_chamber"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["local-chamber"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "description"] 

dependencies = [
  "click==8.1.3",
  "hvac==0.11.2",
  "pyyaml==5.4.1"
]

[project.optional-dependencies]
dev = [
  "black==22.3.0",
  "bump2version==1.0.1",
  "coverage==6.4.1",
  "flake8==4.0.1",
  "flit==3.7.1",
  "pytest==7.1.2",
  "pytest-datadir==1.3.1",
  "tox==3.25.0"
]
docs = [
  "sphinx==5.0.1",
  "sphinx-click==4.1.0",
  "sphinx-rtd-theme==1.0.0"
]

[project.urls]
Home = "https://github.com/rstms/local-chamber"

[tool.black]
line-length = 135

[tool.isort]
profile = "black"

[tool.pytest]
collect_ignore = ['setup.py']

[project.scripts]
chamber = "local_chamber.__main__:chamber"
local_chamber = "local_chamber.__main__:local_chamber"

